# neurai-explorer

./: .dockerignore  .gitignore  README.md  docker-compose.yml
frontend/: Dockerfile  ecosystem.config.js  next.config.ts  package.json  tailwind.config.ts
frontend/prisma/: schema.prisma
frontend/src/: config.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/: page.tsx
frontend/src/app/assets/: page.tsx
frontend/src/app/blocks/: page.tsx
frontend/src/app/peers/: page.tsx
frontend/src/app/richlist/: page.tsx
frontend/src/app/stats/: StatsView.tsx  page.tsx
frontend/src/app/txs/: page.tsx
frontend/src/components/: DifficultyGraph.tsx  FooterSocials.tsx  HeaderNav.tsx  HomeLabel.tsx  MobileNav.tsx  ScrollToTop.tsx  SyncStatus.tsx  ThemeToggle.tsx  TxIdDisplay.tsx
frontend/src/hooks/: useChartColors.ts
frontend/src/lib/: api.ts  nav.ts  queryKeys.ts  rateLimit.ts  transformers.ts  utils.ts  validation.ts
frontend/src/types/: index.ts
node/: Dockerfile  node.sh
syncer/: .gitignore  Cargo.toml  Dockerfile  config.json
syncer/migrations/: 20260120000000_initial.sql
syncer/src/: config.rs  error.rs  main.rs
syncer/src/db/: mod.rs  pool.rs
syncer/src/db/repositories/: addresses.rs  assets.rs  blocks.rs  daily_stats.rs  mempool.rs  mod.rs  network_stats.rs  sync_state.rs  transactions.rs
syncer/src/rpc/: client.rs  mod.rs  types.rs
syncer/src/sync/: cache.rs  daily_stats.rs  engine.rs  mempool.rs  mod.rs  processor.rs  stats.rs
syncer/src/types/: block.rs  mod.rs  network.rs  transaction.rs
(+21 files in other folders)
