[package]
name = "neurai-syncer"
version = "3.0.0"
edition = "2021"
rust-version = "1.92"
description = "High-performance blockchain syncer for Neurai Explorer"
authors = ["Neurai Team"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "signal"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "chrono", "bigdecimal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
lru = "0.13"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
